// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cases for FormTextInput should render snapshot 1`] = `ShallowWrapper {}`;

exports[`Test cases for FormTextInput should render snapshot and call handleChange when input type is number 1`] = `ShallowWrapper {}`;

exports[`Test cases for FormTextInput should render snapshot and call handleChange when inputPrefixText is not there 1`] = `ShallowWrapper {}`;

exports[`Test cases for FormTextInput should render snapshot when input type is decimal 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      keyboardType="numeric"
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
    <Text
      style={
        Array [
          Object {
            "fontSize": 14,
            "lineHeight": 22,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "bottom": 14,
            "color": "#808D9B",
            "position": "absolute",
            "right": 6,
            "top": 13,
          },
        ]
      }
    >
      INR
    </Text>
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when input type is email 1`] = `ShallowWrapper {}`;

exports[`Test cases for FormTextInput should render snapshot when input type is password 1`] = `ShallowWrapper {}`;

exports[`Test cases for FormTextInput should render snapshot when input type is phone 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      keyboardType="number-pad"
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      style={
        Object {
          "borderColor": "#C9D6DF",
          "borderRadius": 4,
          "borderWidth": 1,
          "color": "#001B36",
          "fontSize": 14,
          "height": 48,
          "paddingHorizontal": 16,
          "paddingStart": 100,
          "paddingVertical": 4,
          "textAlign": "left",
        }
      }
      underlineColorAndroid="transparent"
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#F0F5F9",
          "borderRightColor": "#C9D6DF",
          "borderRightWidth": 0.5,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "left": 1,
          "marginTop": 2,
          "position": "absolute",
          "right": 5,
          "width": 90,
        }
      }
    >
      <Image
        height={12}
        source={
          Object {
            "testUri": "../../../packages/common/src/assets/images/flag.png",
          }
        }
        style={
          Object {
            "marginEnd": 6,
          }
        }
        width={18}
      />
      <Text
        style={
          Array [
            Object {
              "fontSize": 12,
              "lineHeight": 18,
              "textAlign": "left",
            },
            Object {
              "fontFamily": "OpenSans-Regular",
              "fontWeight": "400",
            },
            Object {
              "color": "#4C5F72",
            },
          ]
        }
      >
        +91
      </Text>
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#99A4AF",
              "fontSize": 12,
            },
            Object {
              "marginStart": 6,
            },
            Object {
              "fontFamily": "icomoon",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>,
]
`;

exports[`Test cases for FormTextInput should render snapshot when password revealer is hide 1`] = `
Array [
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "lineHeight": 18,
          "textAlign": "left",
        },
        Object {
          "fontFamily": "OpenSans-Regular",
          "fontWeight": "400",
        },
        Object {
          "color": "#33495E",
          "marginBottom": 6,
          "marginTop": 16,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "fontSize": 10,
            "lineHeight": 15,
            "textAlign": "left",
          },
          Object {
            "fontFamily": "OpenSans-Regular",
            "fontWeight": "400",
          },
          Object {
            "color": "#33495E",
          },
        ]
      }
    />
  </Text>,
  <View
    style={Object {}}
  >
    <TextInput
      allowFontScaling={true}
      autoCorrect={false}
      maxLength={40}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#C9D6DF"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={Object {}}
      underlineColorAndroid="transparent"
    />
  </View>,
]
`;
